--- a/vue-app/package.json
+++ b/vue-app/package.json
@@ -8,10 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@moefe/vue-aplayer": "^2.0.0-beta.5",
+    "axios": "^1.6.8",
     "blueimp-md5": "^2.18.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.14.1",
     "vue": "^2.6.11",
+    "vue-axios": "^3.5.2",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
